--- a/Templates/informe_3.html
+++ b/Templates/informe_3.html
@@ -69,13 +69,13 @@
     <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="usuario">formulario_usuario</a>
         </li>
         <li class="nav-item" id="nav">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">proximamente</a>
         </li>
         <li class="nav-item"id="nav">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">prox</a>
         </li>
         <li class="nav-item" id="nav">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -139,11 +139,12 @@
           <input type="reset" class="btn btn-secondary" value="Reiniciar">
         </div>
       </div>
-      
+      <div id="contenidoCargado"></div>
+
   </form>
 
 
-
+ 
 </body>
 
 </html>
