--- a/Templates/datos_enviados.html
+++ b/Templates/datos_enviados.html
@@ -7,9 +7,9 @@
     <h2>Confirmación de Envío</h2>
     <form method="post">
         {% csrf_token %}
-        <o>Hallo</p>
+        <p>datos enviados</p>
         <br>
-        <input type="submit" value="Aceptar">
+        
     </form>
 </body>
 </html>
