--- a/Templates/usuario.html
+++ b/Templates/usuario.html
@@ -4,22 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Sala</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+        h4 {
+            color: #333;
+            font-size: 1.2rem; 
+            
+           
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #555;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
 
-    <h2>Formulario de usuario</h2>
-
     <form action="/user/" method="POST">
-    {% csrf_token %}
-      
+        {% csrf_token %}
+
+        <h2>Formulario de usuario</h2>
+        <h4>usuario</h4>
         <label for="id_usuario">ID de Usuario:</label>
         <input type="text" id="id_usuario" name="id_usuario" required>
 
-    
         <label for="nombre_usuario">Nombre de Usuario:</label>
         <input type="text" id="nombre_usuario" name="nombre_usuario" required>
 
-        <!-- Botón de envío del formulario -->
+        <h3>estado:</h3>
+        <label for="estado_id">estado_id:</label>
+        <input type="text" id="estado_id" name="estado_id" required>
+
+        <label for="descripcion">descripcion:</label>
+        <input type="text" id="descripcion" name="descripcion" required>
+
+        <label for="fecha_hora">fecha:</label>
+        <input type="text" id="fecha_hora" name="fecha_hora" required>
+
+       
         <button type="submit">Enviar</button>
     </form>
 
